Enhance CloudFront cache invalidation logic in AWS setup workflow to handle missing distribution ID

--- a/.github/workflows/setup-aws-infrastructure.yml
+++ b/.github/workflows/setup-aws-infrastructure.yml
@@ -335,11 +335,14 @@ jobs:
             --include "*.json"
 
       - name: Invalidate CloudFront cache
-        if: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
         run: |
-          aws cloudfront create-invalidation \
-            --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
-            --paths "/*"
+          if [ -n "${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}" ]; then
+            aws cloudfront create-invalidation \
+              --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
+              --paths "/*"
+          else
+            echo "⚠️  CLOUDFRONT_DISTRIBUTION_ID not set, skipping cache invalidation"
+          fi
 
       - name: Output deployment info
         run: |
