--- a/.github/workflows/setup-aws-infrastructure.yml
+++ b/.github/workflows/setup-aws-infrastructure.yml
@@ -134,75 +134,72 @@ jobs:
           else
             echo "🌐 Creating CloudFront distribution..."
             
-            # Create base CloudFront config JSON using a heredoc with single quotes to avoid variable expansion issues
-            cat > /tmp/cloudfront-config-base.json <<'BASEJSON'
-{
-  "CallerReference": "TIMESTAMP_PLACEHOLDER",
-  "Comment": "BUCKET_NAME_PLACEHOLDER",
-  "DefaultRootObject": "index.html",
-  "Origins": {
-    "Quantity": 1,
-    "Items": [{
-      "Id": "S3-BUCKET_NAME_PLACEHOLDER",
-      "DomainName": "BUCKET_DOMAIN_PLACEHOLDER",
-      "OriginAccessControlId": "OAC_ID_PLACEHOLDER",
-      "S3OriginConfig": {
-        "OriginAccessIdentity": ""
-      }
-    }]
-  },
-  "DefaultCacheBehavior": {
-    "TargetOriginId": "S3-BUCKET_NAME_PLACEHOLDER",
-    "ViewerProtocolPolicy": "redirect-to-https",
-    "AllowedMethods": {
-      "Quantity": 2,
-      "Items": ["GET", "HEAD"],
-      "CachedMethods": {
-        "Quantity": 2,
-        "Items": ["GET", "HEAD"]
-      }
-    },
-    "ForwardedValues": {
-      "QueryString": false,
-      "Cookies": {"Forward": "none"}
-    },
-    "MinTTL": 0,
-    "DefaultTTL": 86400,
-    "MaxTTL": 31536000,
-    "Compress": true
-  },
-  "CustomErrorResponses": {
-    "Quantity": 2,
-    "Items": [
-      {
-        "ErrorCode": 404,
-        "ResponsePagePath": "/index.html",
-        "ResponseCode": "200",
-        "ErrorCachingMinTTL": 300
-      },
-      {
-        "ErrorCode": 403,
-        "ResponsePagePath": "/index.html",
-        "ResponseCode": "200",
-        "ErrorCachingMinTTL": 300
-      }
-    ]
-  },
-  "Enabled": true,
-  "PriceClass": "PriceClass_100"
-}
-BASEJSON
-            
-            # Replace placeholders
-            sed -i "s|TIMESTAMP_PLACEHOLDER|$(date +%s)|g" /tmp/cloudfront-config-base.json
-            sed -i "s|BUCKET_NAME_PLACEHOLDER|${S3_BUCKET_NAME}|g" /tmp/cloudfront-config-base.json
-            sed -i "s|BUCKET_DOMAIN_PLACEHOLDER|${S3_BUCKET_NAME}.s3.${BUCKET_REGION}.amazonaws.com|g" /tmp/cloudfront-config-base.json
-            sed -i "s|OAC_ID_PLACEHOLDER|${OAC_ID}|g" /tmp/cloudfront-config-base.json
+            # Build CloudFront config using jq to avoid YAML parsing issues
+            CLOUDFRONT_CONFIG=$(jq -n \
+              --arg caller_ref "$(date +%s)" \
+              --arg comment "Distribution for ${S3_BUCKET_NAME}" \
+              --arg bucket_name "${S3_BUCKET_NAME}" \
+              --arg domain_name "${S3_BUCKET_NAME}.s3.${BUCKET_REGION}.amazonaws.com" \
+              --arg oac_id "${OAC_ID}" \
+              '{
+                "CallerReference": $caller_ref,
+                "Comment": $comment,
+                "DefaultRootObject": "index.html",
+                "Origins": {
+                  "Quantity": 1,
+                  "Items": [{
+                    "Id": "S3-\($bucket_name)",
+                    "DomainName": $domain_name,
+                    "OriginAccessControlId": $oac_id,
+                    "S3OriginConfig": {
+                      "OriginAccessIdentity": ""
+                    }
+                  }]
+                },
+                "DefaultCacheBehavior": {
+                  "TargetOriginId": "S3-\($bucket_name)",
+                  "ViewerProtocolPolicy": "redirect-to-https",
+                  "AllowedMethods": {
+                    "Quantity": 2,
+                    "Items": ["GET", "HEAD"],
+                    "CachedMethods": {
+                      "Quantity": 2,
+                      "Items": ["GET", "HEAD"]
+                    }
+                  },
+                  "ForwardedValues": {
+                    "QueryString": false,
+                    "Cookies": {"Forward": "none"}
+                  },
+                  "MinTTL": 0,
+                  "DefaultTTL": 86400,
+                  "MaxTTL": 31536000,
+                  "Compress": true
+                },
+                "CustomErrorResponses": {
+                  "Quantity": 2,
+                  "Items": [
+                    {
+                      "ErrorCode": 404,
+                      "ResponsePagePath": "/index.html",
+                      "ResponseCode": "200",
+                      "ErrorCachingMinTTL": 300
+                    },
+                    {
+                      "ErrorCode": 403,
+                      "ResponsePagePath": "/index.html",
+                      "ResponseCode": "200",
+                      "ErrorCachingMinTTL": 300
+                    }
+                  ]
+                },
+                "Enabled": true,
+                "PriceClass": "PriceClass_100"
+              }')
             
             # Add aliases and SSL if provided
             if [ -n "$DOMAIN_NAME" ] && [ -n "$ACM_CERT_ARN" ]; then
-              # Use jq to add aliases and SSL config
-              jq \
+              CLOUDFRONT_CONFIG=$(echo "$CLOUDFRONT_CONFIG" | jq \
                 --arg domain "$DOMAIN_NAME" \
                 --arg cert "$ACM_CERT_ARN" \
                 '. + {
@@ -215,10 +212,11 @@ BASEJSON
                     "SSLSupportMethod": "sni-only",
                     "MinimumProtocolVersion": "TLSv1.2_2021"
                   }
-                }' /tmp/cloudfront-config-base.json > /tmp/cloudfront-config.json
-            else
-              cp /tmp/cloudfront-config-base.json /tmp/cloudfront-config.json
+                }')
             fi
+            
+            # Save to file
+            echo "$CLOUDFRONT_CONFIG" > /tmp/cloudfront-config.json
             
             DIST_ID=$(aws cloudfront create-distribution \
               --distribution-config file:///tmp/cloudfront-config.json \
