--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -27,16 +27,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          cache-dependency-path: src/frontend/package-lock.json
+          cache: 'yarn'
+          cache-dependency-path: src/frontend/yarn.lock
 
       - name: Install dependencies
         working-directory: ./src/frontend
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Build frontend
         working-directory: ./src/frontend
-        run: npm run build
+        run: yarn build
         env:
           VITE_API_URL: ${{ secrets.VITE_API_URL || 'https://api.marchant.com/api/v1' }}
           NODE_ENV: production
