--- a/.github/workflows/setup-aws-infrastructure.yml
+++ b/.github/workflows/setup-aws-infrastructure.yml
@@ -307,16 +307,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          cache-dependency-path: src/frontend/package-lock.json
+          cache: 'yarn'
+          cache-dependency-path: src/frontend/yarn.lock
 
       - name: Install dependencies
         working-directory: ./src/frontend
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Build frontend
         working-directory: ./src/frontend
-        run: npm run build
+        run: yarn build
         env:
           VITE_API_URL: ${{ secrets.VITE_API_URL || 'https://api.marchant.com/api/v1' }}
           NODE_ENV: production
@@ -375,16 +375,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          cache-dependency-path: src/backend/package-lock.json
+          cache: 'yarn'
+          cache-dependency-path: src/backend/yarn.lock
 
       - name: Install dependencies
         working-directory: ./src/backend
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Build backend
         working-directory: ./src/backend
-        run: npm run build
+        run: yarn build
         env:
           NODE_ENV: production
 
@@ -396,7 +396,7 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Install Serverless Framework
-        run: npm install -g serverless
+        run: yarn global add serverless || npm install -g serverless
 
       - name: Deploy to Lambda
         working-directory: ./src/backend
