Refactor AWS deployment workflows to enhance error handling and verification processes. Improved S3 bucket existence checks, added detailed troubleshooting steps, and ensured consistent handling of environment variables across frontend and backend deployments. Removed deprecated scripts to streamline the deployment process.

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -57,16 +57,18 @@ jobs:
             --region ${{ env.AWS_REGION }} \
             --verbose
         env:
+          # Application environment variables (passed to Lambda)
           MONGODB_URI: ${{ secrets.MONGODB_URI }}
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
           JWT_EXPIRES_IN: ${{ secrets.JWT_EXPIRES_IN || '24h' }}
-          AWS_REGION: ${{ secrets.AWS_REGION || 'us-east-1' }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           FROM_EMAIL: ${{ secrets.FROM_EMAIL || 'noreply@marchant.com' }}
           FRONTEND_URL: ${{ secrets.FRONTEND_URL }}
           NODE_ENV: production
           ALLOWED_ORIGINS: ${{ secrets.ALLOWED_ORIGINS || '' }}
+          LOG_LEVEL: ${{ secrets.LOG_LEVEL || 'info' }}
+          # Note: AWS_REGION, AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY are NOT passed
+          # as Lambda environment variables because they are reserved and automatically
+          # provided by AWS Lambda runtime
 
       - name: Output deployment info
         run: |
